--- a/src/components/Blog/Blog.scss
+++ b/src/components/Blog/Blog.scss
@@ -13,11 +13,6 @@
 input.ant-input {
     height: 40px;
 }
-@media (max-width: 575px) {
-    .feed {
-        width: 100%;
-    }
-}
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
@@ -26,9 +21,6 @@ input.ant-input {
         width: 100%;
     }
 
-    .feed {
-        width: 100%;
-    }
     .ant-card {
         font-size: 140%;
     }
@@ -43,9 +35,7 @@ input.ant-input {
     .card-action {
         width: calc(100% - 2px);
     }
-    .feed {
-        width: calc(100% - 103px);
-    }
+
     .ant-card {
         font-size: 130%;
     }
@@ -97,6 +87,7 @@ input.ant-input {
     margin: auto;
 }
 .feed {
+    width: 70px;
     position: fixed;
     bottom: 20%;
     z-index: 99;
