--- a/src/components/Blog/Blog.scss
+++ b/src/components/Blog/Blog.scss
@@ -24,26 +24,16 @@ input.ant-input {
     .ant-card {
         font-size: 140%;
     }
-    .card-container {
-        margin: 58px 0;
-    }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     .card-container,
-    .card-action {
-        width: calc(100% - 2px);
-    }
-
     .ant-card {
         font-size: 130%;
     }
     .ant-layout-content {
         padding: 16px 50px;
-    }
-    .card-container {
-        margin: 90px 0 58px;
     }
 }
 
@@ -56,6 +46,9 @@ input.ant-input {
 
     .ant-card {
         font-size: 120%;
+    }
+    .card-container {
+        margin-top: 30px;
     }
 }
 
@@ -82,6 +75,13 @@ input.ant-input {
         font-size: 100%;
     }
 }
+
+.card-container {
+    box-shadow: var(--box-shadow-all);
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .card-action > * {
     flex: 1;
     margin: auto;
@@ -94,5 +94,39 @@ input.ant-input {
     &-action {
         background: linear-gradient(180deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
         background-color: red !important;
+    }
+}
+
+.img-container-blog {
+    width: 100%;
+    overflow: hidden;
+    margin: 0;
+    padding-top: 56.25%;
+    position: relative;
+    .img-container-item {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        transform: translate(-50%, -50%);
+    }
+}
+.back-top {
+    display: inline-block;
+    width: auto;
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    border-radius: 99px;
+    background-color: #ccc;
+    color: #fff;
+    text-align: center;
+    font-size: 14;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    svg {
+        font-size: 20px;
     }
 }
