--- a/src/components/common/Layout.scss
+++ b/src/components/common/Layout.scss
@@ -12,131 +12,41 @@
 .ant-menu-item a:before,
 .ant-menu-submenu:after {
     bottom: 6px !important;
+    background-color: transparent !important;
 }
 .ant-menu-item-selected:after,
 .ant-menu-item:hover:after {
-    border-bottom: 2px solid #00bfe7 !important;
-
-    // display: none;
+    border-bottom: 2px solid transparent !important;
 }
-.ant-menu-item-active:after {
-    border-bottom: 2px solid #00bfe7 !important;
-    // -webkit-transform: scale(1);
-    // -ms-transform: scale(1);
-    // transform: scale(1);
-}
-// .ant-menu-overflow-item,
-// .ant-menu-item,
-// .ant-menu-item-active,
-// .ant-menu-item-selected,
-// .ant-menu-item-only-child {
-//     -webkit-transform: scale(1);
-//     -ms-transform: scale(1);
-//     transform: scale(1);
-// }
 
 .ant-page-header-heading-left {
-    margin: auto;
+    margin-left: auto;
+    margin-right: 4%;
 }
+
 // ant-menu-overflow ant-menu ant-menu-root ant-menu-horizontal ant-menu-light nav-list
 
 // // Nav
 
 .header__nav__menu {
-    display: inline-block;
     margin-right: 45px;
     font-weight: 700;
-    text-transform: uppercase;
     color: var(--primary);
-    & ul {
-        margin-bottom: 12px;
-
-        // height: 100%;
-    }
 
     & ul li {
-        list-style: none;
         display: inline-block;
-        margin-right: 45px;
+
         position: relative;
-        &.active span:after {
-            -webkit-transform: scale(1);
-            -ms-transform: scale(1);
-            transform: scale(1);
-        }
-        &:hover span:after {
-            -webkit-transform: scale(1);
-            -ms-transform: scale(1);
-            transform: scale(1);
-        }
-        &:hover .dropdown {
-            top: 34px;
-            opacity: 1;
-            visibility: visible;
-        }
         &:last-child {
-            margin-right: 0;
         }
         & span {
-            font-size: 15px;
-            font-family: 'Play', sans-serif;
-            display: block;
-            text-transform: uppercase;
             position: relative;
-            // padding: 6px 0;
-            cursor: pointer;
-            &.underline-user:after {
-                bottom: -6px;
-            }
-            &:after {
-                position: absolute;
-                left: 0;
-                bottom: 6px;
-                width: 100%;
-                height: 2px;
-                background: #00bfe7;
-                content: '';
-                -webkit-transform: scale(0);
-                -ms-transform: scale(0);
-                transform: scale(0);
-                -webkit-transition: all, 0.3s;
-                -o-transition: all, 0.3s;
-                transition: all, 0.3s;
-            }
 
             & .nav-item {
-                & a {
+                & .nav-item__text {
                     color: #00bfe7;
                     &:hover {
-                        color: var(--primary);
-                    }
-                }
-            }
-        }
-        & .dropdown {
-            position: absolute;
-            left: 0;
-            top: 60px;
-            width: 140px;
-            background: #ffffff;
-            text-align: left;
-            padding: 2px 0;
-            z-index: 9;
-            opacity: 0;
-            visibility: hidden;
-            -webkit-transition: all, 0.3s;
-            -o-transition: all, 0.3s;
-            transition: all, 0.3s;
-            & li {
-                display: block;
-                margin-right: 0;
-                & a {
-                    font-size: 14px;
-                    color: #111111;
-                    padding: 8px 20px;
-                    text-transform: capitalize;
-                    &:after {
-                        display: none;
+                        // color: var(--primary);
                     }
                 }
             }
@@ -151,10 +61,20 @@
     left: 0;
     right: 0;
     height: 58px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     * > * {
+        font-size: 20px;
         height: 100%;
         align-items: center;
     }
+}
+.sidebar {
+    position: fixed;
+    top: 57px;
+    left: 0;
+    right: 0;
+    height: calc(100% - 57px);
+    box-shadow: var(--box-shadow-all);
 }
 
 // Nav
@@ -185,43 +105,32 @@
     }
 }
 
+.btn-wrapper {
+    // margin: 0;
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    & > button {
+        margin-top: auto;
+    }
+
+    button ~ button {
+        margin-left: 10px;
+    }
+}
 // Antd
-.ant-modal-content {
-    height: 400px;
+.ant-modal-body {
+    height: 345px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-// Selection
-.pt-md-9 {
-    padding-top: 10rem !important;
+.ant-form-item-control-input-content {
+    display: flex;
 }
-.text-center {
-    text-align: center !important;
-}
-.pb-0 {
-    padding-bottom: 0 !important;
-}
-.pt-7 {
-    padding-top: 5rem !important;
-}
-@media (min-width: 768px) {
-    section {
-        padding-top: 7.5rem;
-        padding-bottom: 7.5rem;
-    }
-    section {
-        position: relative;
-        padding-top: 4rem;
-        padding-bottom: 4rem;
-        scroll-margin-top: -1.5625rem;
-    }
-    *,
-    *::before,
-    *::after {
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-    }
 
-    section {
-        display: block;
-    }
+// Avatar
+.avatar-menu {
+    line-height: 30px;
 }
