--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -17,9 +17,13 @@ code {
     --pink-light: #ff7eb4;
     --pink: #ff2581;
     --blue: #1a73e8;
-    --primary: #00bfe7;
+    --primary: #e2f5f9;
+    --box-shadow-all: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
-
+.ant-layout-content {
+    background: #f0f2f5;
+    min-height: 100vh;
+}
 .background-main {
     img {
         position: fixed;
@@ -42,28 +46,43 @@ code {
     position: fixed;
     z-index: 999;
     top: 0px;
-    left: 46px;
+    left: 0;
     font-weight: 300;
     font-size: 40px;
-    .k {
-        top: 0;
+    img {
+        width: 250px;
+        position: absolute;
+        top: -18px;
     }
-    .s {
+    .k {
         top: 20px;
     }
-    .c {
+    .s {
         top: 40px;
+    }
+    .c {
+        top: 60px;
     }
     div {
         width: 50px;
+        top: 20px;
+        left: 20px;
         position: absolute;
         background-color: #aeafad;
         border-color: #aeafad;
-        color: #515052;
         color: transparent;
         background-image: linear-gradient(45deg, #3a24fe, #6a5af9, #8477f6, #ff2ced, #ffb4dc, #fc6c8f, #ffb86c);
         background-clip: text;
         -webkit-text-fill-color: transparent;
         animation: gradient 5s ease alternate infinite;
     }
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.flex-center {
+    display: flex;
+    align-items: center;
 }
