--- a/src/components/Blog/Blog.scss
+++ b/src/components/Blog/Blog.scss
@@ -4,7 +4,8 @@
 
 .list-comment {
     list-style: none;
-    padding: 24px;
+    padding: 0 24px;
+    margin: 0;
 }
 // .user-content {
 //     display: flex;
