--- a/src/components/backstage/BackStage.scss
+++ b/src/components/backstage/BackStage.scss
@@ -46,7 +46,31 @@
 }
 @media (max-width: 576px) {
 	.logo-main {
-		display: none;
+		img {
+			width: 150px;
+			position: absolute;
+			top: -30px;
+		}
+		.k {
+			top: 5px;
+
+			left: 20px;
+		}
+		.s {
+			top: 5px;
+
+			left: 45px;
+		}
+		.c {
+			top: 5px;
+
+			left: 75px;
+		}
+		div {
+			width: 50px;
+			top: 20px;
+			left: 20px;
+		}
 	}
 }
 @media (min-width: 576px) {
